librocksdb_sys/bindings/aarch64-unknown-linux-gnu-bindings.rs

extern "C" {
    pub fn crocksdb_multi_get(
        db: *mut crocksdb_t,
        options: *const crocksdb_readoptions_t,
        num_keys: usize,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
        values_list: *mut *mut libc::c_char,
        values_list_sizes: *mut usize,
        errs: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_multi_get_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_readoptions_t,
        column_families: *const *const crocksdb_column_family_handle_t,
        num_keys: usize,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
        values_list: *mut *mut libc::c_char,
        values_list_sizes: *mut usize,
        errs: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_create_iterator(
        db: *mut crocksdb_t,
        options: *const crocksdb_readoptions_t,
    ) -> *mut crocksdb_iterator_t;
}
extern "C" {
    pub fn crocksdb_create_iterator_cf(
        db: *mut crocksdb_t,
        options: *const crocksdb_readoptions_t,
        column_family: *mut crocksdb_column_family_handle_t,
    ) -> *mut crocksdb_iterator_t;
}
extern "C" {
    pub fn crocksdb_create_iterators(
        db: *mut crocksdb_t,
        opts: *mut crocksdb_readoptions_t,
        column_families: *mut *mut crocksdb_column_family_handle_t,
        iterators: *mut *mut crocksdb_iterator_t,
        size: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_create_snapshot(db: *mut crocksdb_t) -> *const crocksdb_snapshot_t;
}
extern "C" {
    pub fn crocksdb_release_snapshot(db: *mut crocksdb_t, snapshot: *const crocksdb_snapshot_t);
}
extern "C" {
    pub fn crocksdb_get_snapshot_sequence_number(snapshot: *const crocksdb_snapshot_t) -> u64;
}
extern "C" {
    pub fn crocksdb_create_map_property() -> *mut crocksdb_map_property_t;
}
extern "C" {
    pub fn crocksdb_destroy_map_property(info: *mut crocksdb_map_property_t);
}
extern "C" {
    pub fn crocksdb_get_map_property_cf(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        property: *const libc::c_char,
        data: *mut crocksdb_map_property_t,
    ) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_map_property_value(
        info: *mut crocksdb_map_property_t,
        propname: *const libc::c_char,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn crocksdb_map_property_int_value(
        info: *mut crocksdb_map_property_t,
        propname: *const libc::c_char,
    ) -> u64;
}
extern "C" {
    pub fn crocksdb_property_value(
        db: *mut crocksdb_t,
        propname: *const libc::c_char,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn crocksdb_property_value_cf(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        propname: *const libc::c_char,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn crocksdb_approximate_sizes(
        db: *mut crocksdb_t,
        num_ranges: libc::c_int,
        range_start_key: *const *const libc::c_char,
        range_start_key_len: *const usize,
        range_limit_key: *const *const libc::c_char,
        range_limit_key_len: *const usize,
        sizes: *mut u64,
    );
}
extern "C" {
    pub fn crocksdb_approximate_sizes_cf(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        num_ranges: libc::c_int,
        range_start_key: *const *const libc::c_char,
        range_start_key_len: *const usize,
        range_limit_key: *const *const libc::c_char,
        range_limit_key_len: *const usize,
        sizes: *mut u64,
    );
}
extern "C" {
    pub fn crocksdb_approximate_memtable_stats(
        db: *const crocksdb_t,
        range_start_key: *const libc::c_char,
        range_start_key_len: usize,
        range_limit_key: *const libc::c_char,
        range_limit_key_len: usize,
        count: *mut u64,
        size: *mut u64,
    );
}
extern "C" {
    pub fn crocksdb_approximate_memtable_stats_cf(
        db: *const crocksdb_t,
        cf: *const crocksdb_column_family_handle_t,
        range_start_key: *const libc::c_char,
        range_start_key_len: usize,
        range_limit_key: *const libc::c_char,
        range_limit_key_len: usize,
        count: *mut u64,
        size: *mut u64,
    );
}
extern "C" {
    pub fn crocksdb_compact_range(
        db: *mut crocksdb_t,
        start_key: *const libc::c_char,
        start_key_len: usize,
        limit_key: *const libc::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn crocksdb_compact_range_cf(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        start_key: *const libc::c_char,
        start_key_len: usize,
        limit_key: *const libc::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn crocksdb_compact_range_opt(
        db: *mut crocksdb_t,
        opt: *mut crocksdb_compactoptions_t,
        start_key: *const libc::c_char,
        start_key_len: usize,
        limit_key: *const libc::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn crocksdb_compact_range_cf_opt(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        opt: *mut crocksdb_compactoptions_t,
        start_key: *const libc::c_char,
        start_key_len: usize,
        limit_key: *const libc::c_char,
        limit_key_len: usize,
    );
}
extern "C" {
    pub fn crocksdb_delete_file(db: *mut crocksdb_t, name: *const libc::c_char);
}
extern "C" {
    pub fn crocksdb_livefiles(db: *mut crocksdb_t) -> *const crocksdb_livefiles_t;
}
extern "C" {
    pub fn crocksdb_flush(
        db: *mut crocksdb_t,
        options: *const crocksdb_flushoptions_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_flush_cf(
        db: *mut crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
        options: *const crocksdb_flushoptions_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_flush_wal(
        db: *mut crocksdb_t,
        sync: libc::c_uchar,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_sync_wal(db: *mut crocksdb_t, errptr: *mut *mut libc::c_char);
}
extern "C" {
    pub fn crocksdb_get_latest_sequence_number(db: *mut crocksdb_t) -> u64;
}
extern "C" {
    pub fn crocksdb_disable_file_deletions(db: *mut crocksdb_t, errptr: *mut *mut libc::c_char);
}
extern "C" {
    pub fn crocksdb_enable_file_deletions(
        db: *mut crocksdb_t,
        force: libc::c_uchar,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_get_db_options(db: *mut crocksdb_t) -> *mut crocksdb_options_t;
}
extern "C" {
    pub fn crocksdb_set_db_options(
        db: *mut crocksdb_t,
        names: *mut *const libc::c_char,
        values: *mut *const libc::c_char,
        num_options: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_get_options_cf(
        db: *const crocksdb_t,
        column_family: *mut crocksdb_column_family_handle_t,
    ) -> *mut crocksdb_options_t;
}
extern "C" {
    pub fn crocksdb_set_options_cf(
        db: *mut crocksdb_t,
        cf: *mut crocksdb_column_family_handle_t,
        names: *mut *const libc::c_char,
        values: *mut *const libc::c_char,
        num_options: usize,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_destroy_db(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_repair_db(
        options: *const crocksdb_options_t,
        name: *const libc::c_char,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_iter_destroy(arg1: *mut crocksdb_iterator_t);
}
extern "C" {
    pub fn crocksdb_iter_valid(arg1: *const crocksdb_iterator_t) -> libc::c_uchar;
}
extern "C" {
    pub fn crocksdb_iter_seek_to_first(arg1: *mut crocksdb_iterator_t);
}
extern "C" {
    pub fn crocksdb_iter_seek_to_last(arg1: *mut crocksdb_iterator_t);
}
extern "C" {
    pub fn crocksdb_iter_seek(arg1: *mut crocksdb_iterator_t, k: *const libc::c_char, klen: usize);
}
extern "C" {
    pub fn crocksdb_iter_seek_for_prev(
        arg1: *mut crocksdb_iterator_t,
        k: *const libc::c_char,
        klen: usize,
    );
}
extern "C" {
    pub fn crocksdb_iter_next(arg1: *mut crocksdb_iterator_t);
}
extern "C" {
    pub fn crocksdb_iter_prev(arg1: *mut crocksdb_iterator_t);
}
extern "C" {
    pub fn crocksdb_iter_key(
        arg1: *const crocksdb_iterator_t,
        klen: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_iter_value(
        arg1: *const crocksdb_iterator_t,
        vlen: *mut usize,
    ) -> *const libc::c_char;
}
extern "C" {
    pub fn crocksdb_iter_get_error(
        arg1: *const crocksdb_iterator_t,
        errptr: *mut *mut libc::c_char,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_create() -> *mut crocksdb_writebatch_t;
}
extern "C" {
    pub fn crocksdb_writebatch_create_with_capacity(
        reserved_bytes: usize,
    ) -> *mut crocksdb_writebatch_t;
}
extern "C" {
    pub fn crocksdb_writebatch_create_from(
        rep: *const libc::c_char,
        size: usize,
    ) -> *mut crocksdb_writebatch_t;
}
extern "C" {
    pub fn crocksdb_writebatch_destroy(arg1: *mut crocksdb_writebatch_t);
}
extern "C" {
    pub fn crocksdb_writebatch_clear(arg1: *mut crocksdb_writebatch_t);
}
extern "C" {
    pub fn crocksdb_writebatch_count(arg1: *mut crocksdb_writebatch_t) -> libc::c_int;
}
extern "C" {
    pub fn crocksdb_writebatch_put(
        arg1: *mut crocksdb_writebatch_t,
        key: *const libc::c_char,
        klen: usize,
        val: *const libc::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_put_cf(
        arg1: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        klen: usize,
        val: *const libc::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_putv(
        b: *mut crocksdb_writebatch_t,
        num_keys: libc::c_int,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
        num_values: libc::c_int,
        values_list: *const *const libc::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_putv_cf(
        b: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        num_keys: libc::c_int,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
        num_values: libc::c_int,
        values_list: *const *const libc::c_char,
        values_list_sizes: *const usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_merge(
        arg1: *mut crocksdb_writebatch_t,
        key: *const libc::c_char,
        klen: usize,
        val: *const libc::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_merge_cf(
        arg1: *mut crocksdb_writebatch_t,
        column_family: *mut crocksdb_column_family_handle_t,
        key: *const libc::c_char,
        klen: usize,
        val: *const libc::c_char,
        vlen: usize,
    );
}
extern "C" {
    pub fn crocksdb_writebatch_mergev(
        b: *mut crocksdb_writebatch_t,
        num_keys: libc::c_int,
        keys_list: *const *const libc::c_char,
        keys_list_sizes: *const usize,
        num_values: libc::c_int,
        values_list: *const *const libc::c_char,
        values_list_sizes: *const usize,
    );
}
